// 使用proto3语法，默认proto2
syntax = "proto3";

// 是否需要生成的类拆分为多个
option java_multiple_files = true;
// 生成的类所属的层级
option java_package = "ucenter.grpc.client";
option java_outer_classname = "ClientProto";
option objc_class_prefix = "UCENTER";

// 定义包名，避免命名冲突
package ucenter;

// 定义服务
service Client {
  rpc saveClient (SaveClientRequest) returns (ClientSchema) {}
  rpc getClient (GetClientRequest) returns (ClientSchema) {}
  rpc allocPrivs (AllocPrivsRequest) returns (AllocPrivsResponse) {}
  rpc getClientList (GetClientListRequest) returns (GetClientListResponse) {}
}

// 结构化数据：使用message定义。
// 字段类型 字段名 = 字段编号;
message GetClientRequest {
  string clientCode = 1;
}

message SaveClientRequest {
  OperatorSchema curUserInfo = 1;
  ClientSchema clientInfo = 2;
}

message AllocPrivsRequest {
  OperatorSchema curUserInfo = 1;
  string clientCode = 2;
  repeated string modulePrivCodes = 3;
  string toClientCode = 4;
}

message AllocPrivsResponse {
  int32 count = 1;
}
message GetClientListRequest {
  repeated string clientCodes = 1;
}

message GetClientListResponse {
  repeated ClientSchema clients = 1;
}

message Tag {
  string key = 1;
  string value = 2;
}

message OperatorSchema {
  string userCode = 1;
  string realName = 2;
}

message ClientSchema {
  string clientCode = 1;
  string clientName = 2;
  string clientSecret = 3;
  repeated string retUrls = 4;
  repeated string grantTypes = 5;
  repeated string scopes = 6;
  int32 status = 7;
  string description = 8;
  string userCode = 9;
  repeated string loginUrls = 10;
  repeated string logoutUrls = 11;
  repeated Tag tags = 12;
  repeated string modulePrivCodes = 13;
}